<resources>
    <string name="app_name">Mobile Learning</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="title_home">Kelas Anda</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_text">Mobile Learning</string>
    <string name="title_text_sub">Pondok Pesantren</string>
    <string name="title_home_siswa">Kelas Anda</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi_mata_pelajaran">Deskripsi Mata Pelajaran</string>
    <string name="deskripsi">deskripsi</string>
    <string name="masuk_ke_mata_pelajaran">Masuk Ke Mata Pelajaran</string>
    <string name="lihat_materi">Lihat Materi</string>
    <string name="download_materi">Download Materi</string>
    <string name="logout">Logout</string>
    <string name="Judul">Judul</string>
    <string name="sub_judul">Sub Judul</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="kelas">Kelas</string>
    <string name="upload_file">Upload file</string>
    <string name="hapus_kelas">Hapus Kelas</string>
    <string name="edit_kelas">Edit Kelas</string>
    <string name="edit_materi">Edit Materi</string>
    <string name="hapus_materi">Hapus Materi</string>
    <string name="profil">Profil</string>
    <string name="user_management">User Management</string>
    <string name="user_manage">Manage User</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="nama_kelompok">Nama Kelompok</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="kelompok">Kelompok</string>
    <string name="file_belum_dipilih">File Belum Dipilih</string>
</resources>